=== HEAD

* Dataset#from now accepts virtual row blocks (jeremyevans)

* Add Database#refresh_view on PostgreSQL to support refreshing materialized views (jeremyevans)

* Support the Database#drop_view :if_exists option on PostgreSQL (jeremyevans)

* Support the Database#{create,drop}_view :materialized option for creating materialized views in PostgreSQL 9.3+ (jeremyevans)

* Support the Database#create_view :recursive option for creating recursive views in PostgreSQL 9.3+ (jeremyevans)

* Support the Database#create_view :columns option for using explicit columns (jeremyevans)

* Support the Database#create_schema :owner and :if_not_exists options on PostgreSQL (jeremyevans)

* Support :index_type=>:gist option to create GIST full text indexes on PostgreSQL (jeremyevans)

* Add Postgres::ArrayOp#replace for the array_replace function in PostgreSQL 9.3+ (jeremyevans)

* Add Postgres::ArrayOp#remove for the array_remove function in PostgreSQL 9.3+ (jeremyevans)

* Add Postgres::ArrayOp#hstore for creating hstores from arrays (jeremyevans)

* Make Postgres::ArrayOp#[] return ArrayOp if given a range (jeremyevans)

* Ensure that CHECK constraints are surrounded with parentheses (jeremyevans)

* Ensure Dataset#unbind returned variable hash uses symbol keys (jeremyevans)

* Add pg_array_associations plugin, for associations based on PostgreSQL arrays containing foreign keys (jeremyevans)

* Add Sequel.deep_qualify, for easily doing a deep qualification (jeremyevans)

* Enable use of window functions for limited eager loading by default (jeremyevans)

* Handle offsets correctly when eager loading one_to_one associations (jeremyevans)

* Raise exception for infinite and NaN floats on MySQL (jeremyevans) (#677)

* Make dataset string literalization that requires database connection use dataset's chosen server (jeremyevans)

* Make sure an offset without a limit is handled correctly when eager loading (jeremyevans)
